--- a/apps/games-service/package.json
+++ b/apps/games-service/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^5.0.1",
     "moment": "^2.30.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
