--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/config": "^4.0.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^10.4.15",
+    "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^11.0.0",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.5",
