--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "start:dev": "turbo run start:dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "build:auth-service": "nest build apps/auth-service",
+    "build:games-service": "nest build apps/games-service",
+    "build:areas-service": "nest build apps/areas-service",
+    "build:users-service": "nest build apps/users-service",
+    "build:notifications-service": "nest build apps/notifications-service",
+    "build:api-gateway": "nest build apps/api-gateway"
   },
   "devDependencies": {
     "@types/luxon": "^3.4.2",
